🐛 corrected placeholder font on mobile

--- a/Front/src/components/Home/Search/styles.scss
+++ b/Front/src/components/Home/Search/styles.scss
@@ -30,6 +30,11 @@
   @media screen and (max-width: 767px) {
     width: 250px;
   }
+
+  &::placeholder {
+    color: vars.$color-dark-gray;
+    font-size: 1rem;
+  }
 }
 
 .home-search__button {
